//
// Copyright 2020 DxOS.org
//

syntax = "proto3";

// https://developers.google.com/protocol-buffers/docs/proto3#json
// https://developers.google.com/protocol-buffers/docs/proto#updating

//
// Object mutation messages.
//

package dxos.echo;

// TODO(burdon): Should we support schema defs for the underlying objects (not just these mutation semantics?)

//
// Generic value.
//
message Value {
  oneof Type {
    bool      null                    = 1;    // TODO(burdon): Explicit null vs undefined (remove semantics?)

    bool      bool                    = 2;
    int32     int                     = 3;
    float     float                   = 4;
    string    string                  = 5;

    string    timestamp               = 10;   // https://en.wikipedia.org/wiki/Unix_time
    string    datetime                = 11;   // https://en.wikipedia.org/wiki/ISO_8601 (e.g., "2019-10-25T18:48:16Z")
    bytes     bytes                   = 12;

    Object    object                  = 20;
  }
}

message Object {
  repeated KeyValue properites        = 1;
}

message KeyValue {
  string key                          = 1;
  Value value                         = 2;
}

//
// Object mutation.
//
message ObjectMutation {
  enum Operation {
    SET                               = 0;    // Default.
    DELETE                            = 1;
    ARRAY_PUSH                        = 2;
    SET_ADD                           = 3;
    SET_DELETE                        = 4;
  }

  message Mutation {
    Operation operation               = 1;
    string key                        = 2;
    Value value                       = 3;
  }

  // Meta.
  // TODO(burdon): Other meta (e.g., creation time?)
  string objectId                     = 1;

  // TODO(burdon): Rethink dependencies/clock.
  string id                           = 2;
  string dependency                   = 3;

  bool deleted                        = 10;   // System level flag.
  repeated Mutation mutations         = 11;   // Mutations to apply (if not deleted).
}

//
// Batch of ordered object mutations.
//
message ObjectMutationSet {
  repeated ObjectMutation mutations   = 1;
}
